# SyncLife

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: db.py
backend/app/models/: budget.py  calendar_event.py  routine.py
backend/app/routers/: calendar.py  finance.py  routines.py
backend/app/schemas/: budget.py  calendar_event.py  routine.py
backend/app/services/: budget_service.py  calendar_service.py  routine_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: RoutineModal.tsx  ScheduleGrid.tsx  YearCalendar.tsx
frontend/src/pages/: CalendarPage.tsx  MoneyManagerPage.tsx  SchedulePage.tsx
